fix: gnb-menu-area-mobile gap

--- a/css/main.css
+++ b/css/main.css
@@ -337,6 +337,17 @@ picture {
   font-weight: 600;
   line-height: 120%; /* 1.5rem */
 }
+
+@media screen and (max-width: 1024px) {
+  .menu-button-group {
+    gap: 1.5rem;
+  }
+
+  .menu-button-group > a {
+    padding: 0;
+  }
+}
+
 .menu-button-group > a.active {
   color: var(--white, #fff);
 }
@@ -351,7 +362,7 @@ picture {
 }
 
 /* mobile */
-@media (max-width: 1023px) {
+@media (max-width: 1024px) {
   .navbar {
     width: 100%;
     height: 3.5rem;
